<resources>
    <string name="app_name">Note App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_subtitle">Note subtitle</string>
    <string name="text_note_here">Text note here...</string>
    <string name="pick_color">Pick color</string>
    <string name="add_image">Add image</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="add_url">Add url</string>
    <string name="enter_url">Enter URL</string>
    <string name="add_URL">Add URL</string>
    <string name="cancel">Cancel</string>
</resources>